@@ -7,7 +7,7 @@ sub HaveModule ($) {
     !$@;
 }
 
-print "1..13\n";
+print "1..12\n";
 
 if (!HaveModule("HTML::EP")) { print "$@\nnot "; }
 print "ok 1\n";
@@ -40,44 +40,39 @@ if (!HaveModule("HTML::EP::Examples::Admin")) {
 } else {
     print "ok 7\n";
 }
-if (!HaveModule("HTML::EP::Examples::Glimpse")) {
+if (!HaveModule("Mail::POP3Client")) {
+    print "ok 8 # Skip\n";
+} elsif (!HaveModule("HTML::EP::Examples::POP3Client")) {
     print "$@\nnot ok 8\n";
 } else {
     print "ok 8\n";
 }
-if (!HaveModule("Mail::POP3Client")) {
-    print "ok 9 # Skip\n";
-} elsif (!HaveModule("HTML::EP::Examples::POP3Client")) {
-    print "$@\nnot ok 9\n";
-} else {
-    print "ok 9\n";
-}
 if (HaveModule("HTML::EP::Install")) {
-    print "ok 10\n";
+    print "ok 9\n";
 } else {
     print STDERR "$@\n";
-    print "not ok 10\n";
+    print "not ok 9\n";
 }
 if (HaveModule("DBI")) {
     if (HaveModule("HTML::EP::Session::DBI")) {
+	print "ok 10\n";
+    } else {
+	print STDERR "$@\n";
+	print "not ok 10\n";
+    }
+    if (HaveModule("HTML::EP::Session::DBIq")) {
 	print "ok 11\n";
     } else {
 	print STDERR "$@\n";
 	print "not ok 11\n";
     }
-    if (HaveModule("HTML::EP::Session::DBIq")) {
-	print "ok 12\n";
-    } else {
-	print STDERR "$@\n";
-	print "not ok 12\n";
-    }
 } else {
+    print "ok 10 # Skip\n";
     print "ok 11 # Skip\n";
-    print "ok 12 # Skip\n";
 }
 if (HaveModule("HTML::EP::Session::Dumper")) {
-    print "ok 13\n";
+    print "ok 12\n";
 } else {
     print STDERR "$@\n";
-    print "not ok 13\n";
+    print "not ok 12\n";
 }
